[gd_scene load_steps=15 format=3 uid="uid://tg3agv5ll5ty"]

[ext_resource type="Texture2D" uid="uid://vafdief2fdsy" path="res://art/Foozle_2DS0011_Void_MainShip/main_ship.png" id="1_7u6hf"]
[ext_resource type="Script" path="res://scripts/spaceship.gd" id="1_sei7l"]
[ext_resource type="Texture2D" uid="uid://b3e6321xqrv4f" path="res://art/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Engines/PNGs/Main Ship - Engines - Supercharged Engine.png" id="2_x1mws"]
[ext_resource type="Texture2D" uid="uid://4qffecxkkl7u" path="res://art/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Engine Effects/PNGs/Main Ship - Engines - Supercharged Engine - Spritesheet.png" id="3_mb6q0"]
[ext_resource type="Texture2D" uid="uid://bj6use8rceerc" path="res://art/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Shields/PNGs/Main Ship - Shields - Invincibility Shield.png" id="4_byw8q"]
[ext_resource type="Texture2D" uid="uid://cha0e8mdeni4a" path="res://art/keybord and controller icons/individual sprites/keyboard/= equal.png" id="6_xuc01"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jlt6b"]
radius = 6.0

[sub_resource type="Animation" id="Animation_mkmps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Engineflames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shield:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lver8"]
resource_name = "spaceship_active"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Engineflames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shield:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, null, 6, 7, null, 9]
}

[sub_resource type="Animation" id="Animation_pietr"]
resource_name = "spaceship_ready"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Engineflames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shield:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, null, 6, 7, null, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dghil"]
_data = {
"RESET": SubResource("Animation_mkmps"),
"spaceship_active": SubResource("Animation_lver8"),
"spaceship_ready": SubResource("Animation_pietr")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_l2b1f"]
radius = 50.0

[sub_resource type="Gradient" id="Gradient_shr6j"]
offsets = PackedFloat32Array(0, 0.00636943, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.861465, 0.861465, 0.861465, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jn4v8"]
gradient = SubResource("Gradient_shr6j")
fill = 1
fill_from = Vector2(0.491453, 0.521368)
fill_to = Vector2(0.15812, 0.196581)

[node name="Spaceship" type="CharacterBody2D"]
script = ExtResource("1_sei7l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_jlt6b")

[node name="Base" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -1)
texture = ExtResource("1_7u6hf")
hframes = 4

[node name="Engine" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(0, 7)
texture = ExtResource("2_x1mws")

[node name="Engineflames" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 7)
texture = ExtResource("3_mb6q0")
hframes = 4
vframes = 2
frame = 5

[node name="Shield" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -1)
texture = ExtResource("4_byw8q")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dghil")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_l2b1f")

[node name="equals_key" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -26)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_xuc01")

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = SubResource("GradientTexture2D_jn4v8")
texture_scale = 1.25

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
